[tool.poetry]
name = "mywebsite"
version = "0.1.0"
description = "My awesome website"
authors = ["Jonas Krüger Svensson <jonas.svensson@intility.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.70.0"}
httpx = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
